# reforest-nyc

./: .gitignore  PERFORMANCE_IMPROVEMENTS.md  README.md  SERVERS_RUNNING.md
Healthcare Productivity Dashboard/: README.md  index.html  package-lock.json  package.json
Healthcare Productivity Dashboard/src/: App.tsx  index.css
archive/: COMPARISON_AND_TRANSLATION.md  FORWARD_PREDICTION_SYSTEM.md  LEGACY_PROJECTS.md  QUICK_START_TRANSLATION.md  README.md  enhance_urban_futures.py  translate_untitled_to_urban_futures.py  use_urban_futures_priority.py
archive/leap 2/: COMPLETE_SETUP_GUIDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SETUP.md  SETUP_SUMMARY.md  SFNO_GUIDE.md  SFNO_PRIMARY_CHANGES.md  git_setup.sh
archive/untitled folder/: .gitignore  CHANGELOG.md  COMPLETE_EXAMPLE.sh  DATA_DOWNLOAD.md  FULL_NYC_MAP_INFO.md  HOW_IT_WORKS.md  LAUNCH_INSTRUCTIONS.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_ADD_TREES.md  README.md  README_MAP.md  README_MITIGATION.md  REALITY_CHECK.md  SUMMARY.md  add_trees_cli.py  check_progress.sh  config.yaml  example_usage.py  generate_map_data.py  index.html  launch_map.sh  main.py  mitigation_results.csv  requirements.txt  run_10_cells.py  setup.py  tree_mitigation_cli.py
leap/: .gitattributes  .gitignore  GIT_WORKFLOW_JUPYTERLAB.md  QUICK_START.md  leap_startup.ipynb  requirements.txt
urban futures/: .gitignore  README.md  requirements.txt  setup.sh  start_prediction_server.sh
urban futures/cpp/: CMakeLists.txt  Makefile
urban futures/cpp/include/: impact_model.h
urban futures/cpp/src/: impact_model.cpp  main.cpp
(+121 files in other folders)
